unpackaged/main/default/objects/Unit__c/fields/Area_sqm__c.field-meta.xml
<CustomField>
    <fullName>Area_sqm__c</fullName>
    <label>Area (sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>