unpackaged/main/default/objects/Unit__c/fields/Property_Developer__c.field-meta.xml
<CustomField>
    <fullName>Property_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Developer</label>
    <referenceTo>Property_Developer__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>