unpackaged/main/default/objects/Unit__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>1 Bedroom + Study</fullName>
            </value>
            <value>
                <fullName>2 Bedrooms</fullName>
            </value>
            <value>
                <fullName>2 Bedrooms + Study</fullName>
            </value>
            <value>
                <fullName>3 Bedrooms</fullName>
            </value>
            <value>
                <fullName>3 Bedrooms + Study</fullName>
            </value>
            <value>
                <fullName>4 Bedrooms</fullName>
            </value>
            <value>
                <fullName>4 Bedrooms + Study</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>